# learn-and-make-slm

./: .gitignore  AGENTS.md  LICENSE  README.md  config.py  dataset.py  infer.py  infer_onnx.py  infer_torch.py  mise.toml  onnx_export.py  pre_train.py  pyproject.toml  train.py
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
config/: README.md  simple_stories.yaml  simple_stories_gpt_2.yaml  simple_stories_gpt_oss.yaml  simple_stories_gpt_oss_yarn.yaml  simple_stories_gpt_oss_yarn_sigmoid.yaml
models/basic/: embedding.py  layer_norm.py  linear.py  softmax.py
models/transformer/: activation.py  attention.py  decoder.py  decoder_layer.py  feed_forward.py  positional_encoding.py  rope.py
tests/: conftest.py  dataset_test.py
tests/basic/: embbeding_test.py  layer_norm_test.py  linear_test.py  softmax_test.py
tests/models/basic/: layer_norm_test.py
tests/models/transformer/: activation_test.py  decoder_layer_test.py  decoder_test.py  external_cache_test.py  rope_test.py
tests/transformer/: attention_test.py  decoder_layer_test.py  decoder_test.py  rope_test.py
tests/utils/: checkpoint_test.py  kv_cache_test.py  mask_test.py  pad_test.py  tools_test.py
utils/: checkpoint.py  kv_cache.py  mask.py  model.py  pad.py  randn.py  tools.py
