[project]
name = "learn-and-make-gpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beartype>=0.22.6",
    "jaxtyping>=0.3.3",
    "numpy>=2.3.4",
    "torch@https://download.pytorch.org/whl/cu126/torch-2.9.0%2Bcu126-cp313-cp313-manylinux_2_28_x86_64.whl ; sys_platform == 'linux'",
    "torch==2.9.0 ; sys_platform != 'linux'",
    "xformers ; sys_platform == 'linux'",
]

[dependency-groups]
dev = ["ruff>=0.13.2", "ipykernel>=6.30.1"]

[tool.uv]
managed = true
package = false

[tool.ruff]
target-version = "py313"
line-length = 125

[tool.ruff.lint]
ignore = [
    "F722", # https://docs.kidger.site/jaxtyping/faq/#flake8-or-ruff-are-throwing-an-error
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
