[project]
name = "learn-and-make-slm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beartype>=0.22.6",
    "datasets>=4.4.1",
    "jaxtyping>=0.3.3",
    "numpy>=2.3.4",
    "pyyaml>=6.0.3",
    "tensorboard>=2.20.0",
    "tiktoken>=0.12.0",
    "torch==2.9.0",
    "tqdm>=4.67.1",
    "xformers ; sys_platform == 'linux'",
]

# TODO: 学習マシンの CUDA のバージョン次第で pytorch-cu[version] の部分は調整する
# https://docs.astral.sh/uv/guides/integration/pytorch/#using-a-pytorch-index
[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux' and sys_platform != 'win32'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.13.2",
    "ipykernel>=6.30.1",
    "pytest>=8.3.3",
    "pytest-github-actions-annotate-failures>=0.3.0",
    "ty>=0.0.2",
]

[tool.uv]
managed = true
package = false

[tool.ruff]
target-version = "py313"
line-length = 125

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = ["TC"]
ignore = [
    "F722", # https://docs.kidger.site/jaxtyping/faq/#flake8-or-ruff-are-throwing-an-error
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
addopts = "--jaxtyping-packages=models,utils,beartype.beartype"
